--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -312,59 +312,80 @@
 
 
       <div class="col-6 col-md-2 offset-md-2 mb-5" >
-        <div class='card'id="lead">
-          <div class='card-footer team-footer'>
-            <p class='member-name'>
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/lead.jpeg' %}"
+          alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
               Abhishek Sharma
-            </p>
-            <p class='member-position'>
+            </h5>
               Project Lead
-            </p>
-          </div>
+          </section>
         </div>
       </div>
+      
       <div class="col-6 col-md-2 offset-md-1 mb-5" >
-        <div class='card'id="design">
-          <div class='card-footer team-footer'>
-            <p class='member-name'>
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/Bharat.jpg' %}"
+          alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
               Yash Agarwal
-            </p>
-            <p class='member-position'>
-              Data Science 
-            </p>
-          </div>
+            </h5>
+              Data Science
+          </section>
         </div>
       </div>
+
       <div class="col-6 col-md-2 offset-md-1 mb-5" >
-        <div class='card'id="design">
-          <div class='card-footer team-footer'>
-            <p class='member-name'>
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/Bharat.jpg' %}"
+          alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
               Yash Shah
-            </p>
-            <p class='member-position'>
+            </h5>
               Data Science
-            </p>
-          </div>
+          </section>
         </div>
       </div>
 
       <div class="col-6 col-md-2 offset-md-2 mb-5" >
-        <div class='card'>
-          <img src="{% static 'main/images/team/Manav-2.jpg' %}" alt="team/Manav-2.jpg" class="img-responsive img-fluid "   />
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/Manav.jpg' %}"
+          alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
+              Manav Ladha
+            </h5>
+              Designer
+          </section>
         </div>
       </div>
       
-      <div class="col-6 col-md-2 offset-md-1 mb-5">
-        <div class='card'>
-          <img src="{% static 'main/images/team/Bharat-2.jpg' %}" 
-          alt="team/Bharat-2.jpg" class="img-fluid img-responsive"   />
+      <div class="col-6 col-md-2 offset-md-1 mb-5" >
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/Bharat.jpg' %}"
+          alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
+              Bharat Paliwal
+            </h5>
+              Web Developer
+          </section>
         </div>
       </div>
       
-      <div class="col-6 col-md-2 offset-md-1 mb-5">
-        <div class='card'>
-          <img src="{% static 'main/images/team/Naman-2.jpg' %}" 
-          alt="team/Naman-2.jpg" class='img-fluid img-responsive' />
+      <div class="col-6 col-md-2 offset-md-1 mb-5" >
+        <div class='card text-white'>
+          <img src="{% static 'main/images/team/Naman.jpg' %}"
+          alt="team/naman.jpg" class="img-responsive img-fluid card-img-top"/>
+          <section class="card-body ctm_card_bg">
+            <h5 class="card-title">
+              Naman Maheshwari
+            </h5>
+              Data Science
+          </section>
         </div>
       </div>
 
