--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -234,19 +234,19 @@
     
           <div class="cards">
             <label class="card car-card" for="item-1" id="song-1">
-              <img class='car-img' src="{% static 'main/images/Asanas/pose.png' %}" alt="Asanas/pose.png">
+              <img class='car-img' src="{% static 'main/images/Asanas/Group62.png' %}" alt="Asanas/pose.png">
             </label>
             <label class="card car-card" for="item-2" id="song-2">
-              <img class='car-img' src="{% static 'main/images/Asanas/Sukasana.jpg' %}" alt="Asanas/Sukasana.jpg">
+              <img class='car-img' src="{% static 'main/images/Asanas/Group63.png' %}" alt="Asanas/Sukasana.jpg">
             </label>
             <label class="card car-card" for="item-3" id="song-3">
-              <img class='car-img' src="{% static 'main/images/Asanas/Virabhadrasana II.jpg' %}" alt="Asanas/Virabhadrasana II.jpg">
+              <img class='car-img' src="{% static 'main/images/Asanas/Group64.png' %}" alt="Asanas/Virabhadrasana II.jpg">
             </label>
             <label class="card car-card" for="item-4" id="song-4">
-                <img class='car-img' src="{% static 'main/images/Asanas/virabhadrasana_1_1.jpg' %}" alt="Asanas/virabhadrasana_1_1.jpg">
+                <img class='car-img' src="{% static 'main/images/Asanas/Group65.png' %}" alt="Asanas/virabhadrasana_1_1.jpg">
               </label>
               <label class="card car-card" for="item-5" id="song-5">
-                <img  class='car-img' src="{% static 'main/images/Asanas/vriksasan.jpg' %}" alt="Asanas/vriksasan.jpg">
+                <img  class='car-img' src="{% static 'main/images/Asanas/Group66.png' %}" alt="Asanas/vriksasan.jpg">
               </label>
           </div>
         </div>
