--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -326,7 +326,7 @@
       
       <div class="col-6 col-md-2 offset-md-1 mb-5" >
         <div class='card text-white'>
-          <img src="{% static 'main/images/team/Bharat.jpg' %}"
+          <img src="{% static 'main/images/team/yash_Agarwal.png' %}"
           alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
           <section class="card-body ctm_card_bg">
             <h5 class="card-title">
@@ -339,7 +339,7 @@
 
       <div class="col-6 col-md-2 offset-md-1 mb-5" >
         <div class='card text-white'>
-          <img src="{% static 'main/images/team/Bharat.jpg' %}"
+          <img src="{% static 'main/images/team/yash_shah.png' %}"
           alt="team/Manav.jpg" class="img-responsive img-fluid card-img-top"/>
           <section class="card-body ctm_card_bg">
             <h5 class="card-title">
